--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>SILKIE CHICKENS FOREVER!!!!!!</h1>
+    <p>This a page dedicated to the wonderfull Silkie chickens. They look great and are very tasty too!!</p>
     <img id="banner"
         src="https://images.unsplash.com/photo-1563281577-a7be47e20db9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80"
         alt="">
